BiigUpdate
- tilføjet post request (api)
- tabellen bruger nu data fra db
- tilføjet så man kan oprette en kunde
